# serializer version: 1
# name: test_cli_help_snapshot
  '''
  usage: fext [-h] [--version] [-v | -q]
              {download,d,batch,b,search,s,inspect,i,preview,p,diff,verify,locales,audit,a,risk,r,scan,analyze,report,serve,update-manifest,um,mirror,extract,x,tutorial,optimize,clean,schema,convert,config,setup,info,explain,history,stats,graph,timeline,ui,plugin,beautify,fmt,similar,pack,migrate,git,update,badge,grep,sandbox,share,watch,query,export,rules}
              ...
  
  Download or search for browser extensions.
  
  positional arguments:
    {download,d,batch,b,search,s,inspect,i,preview,p,diff,verify,locales,audit,a,risk,r,scan,analyze,report,serve,update-manifest,um,mirror,extract,x,tutorial,optimize,clean,schema,convert,config,setup,info,explain,history,stats,graph,timeline,ui,plugin,beautify,fmt,similar,pack,migrate,git,update,badge,grep,sandbox,share,watch,query,export,rules}
                          Command to execute
      download (d)        Download an extension
      batch (b)           Download extensions from a batch file
      search (s)          Search for an extension
      inspect (i)         Inspect an extension file
      preview (p)         Preview extension contents
      diff                Compare two extension versions
      verify              Verify CRX signature
      locales             Inspect extension locales
      audit (a)           Audit extension for MV3 compatibility
      risk (r)            Analyze permission risk
      scan                Scan extension for vulnerable dependencies
      analyze             Analyze extension code
      report              Generate a comprehensive report
      serve               Host local repository as update server
      update-manifest (um)
                          Generate update manifest for local extensions
      mirror              Sync local directory with extension list
      extract (x)         Extract extension contents
      tutorial            Run interactive tutorial
      optimize            Optimize images in an extension
      clean               Clean up caches and artifacts
      schema              Get JSON schema for outputs
      convert             Convert extension format
      config              Manage configuration
      setup               Run configuration wizard
      info                Show extension metadata
      explain             Explain a permission
      history             View download history
      stats               Analyze repository statistics
      graph               Visualize extension structure
      timeline            Visualize file modification timeline
      ui                  Launch TUI
      plugin              Manage plugins
      beautify (fmt)      Beautify JavaScript and JSON files
      similar             Find similar extensions
      pack                Pack a directory into a signed CRX3 file
      migrate             Migrate an MV2 extension to MV3
      git                 Git integration tools
      update              Update extensions
      badge               Generate SVG badges for extension
      grep                Search for pattern in all extensions
      sandbox             Execute JS in a secure sandbox (requires Deno)
      share               Share a report via Gist or other providers.
      watch               Monitor a directory for new extensions.
      query               Execute SQL query against history database
      export              Export analysis data to external formats
      rules               Manage analysis rules
  
  options:
    -h, --help            show this help message and exit
    --version             show program's version number and exit
    -v, --verbose         Enable verbose logging (DEBUG level)
    -q, --quiet           Enable quiet mode (ERROR level only, no progress bars)
  
  '''
# ---
# name: test_cli_info_snapshot
  ''
# ---
# name: test_cli_version_snapshot
  '''
  fext 1.7.0
  
  '''
# ---
